--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,9 @@ langchain
 langchain_google_genai
 langchain-community
 langchain-core
+pypdf2
+PyPDF
+langchain-chroma>=0.1.2
+langchain_text_splitters
+fastembed
 streamlit
